%YAML 1.1
%TAG !u! tag:unity3d.com,2011:
--- !u!1101 &-8325293901956482825
AnimatorStateTransition:
  m_ObjectHideFlags: 1
  m_CorrespondingSourceObject: {fileID: 0}
  m_PrefabInstance: {fileID: 0}
  m_PrefabAsset: {fileID: 0}
  m_Name: 
  m_Conditions: []
  m_DstStateMachine: {fileID: 0}
  m_DstState: {fileID: 0}
  m_Solo: 0
  m_Mute: 0
  m_IsExit: 1
  serializedVersion: 3
  m_TransitionDuration: 0.25
  m_TransitionOffset: 0
  m_ExitTime: 0.625
  m_HasExitTime: 1
  m_HasFixedDuration: 1
  m_InterruptionSource: 0
  m_OrderedInterruption: 1
  m_CanTransitionToSelf: 1
--- !u!1102 &-8247859684427529401
AnimatorState:
  serializedVersion: 6
  m_ObjectHideFlags: 1
  m_CorrespondingSourceObject: {fileID: 0}
  m_PrefabInstance: {fileID: 0}
  m_PrefabAsset: {fileID: 0}
  m_Name: Locomotion
  m_Speed: 1
  m_CycleOffset: 0
  m_Transitions:
  - {fileID: -8188387325826356113}
  m_StateMachineBehaviours: []
  m_Position: {x: 50, y: 50, z: 0}
  m_IKOnFeet: 0
  m_WriteDefaultValues: 1
  m_Mirror: 0
  m_SpeedParameterActive: 0
  m_MirrorParameterActive: 0
  m_CycleOffsetParameterActive: 0
  m_TimeParameterActive: 0
  m_Motion: {fileID: -6237683413018655686}
  m_Tag: 
  m_SpeedParameter: 
  m_MirrorParameter: 
  m_CycleOffsetParameter: 
  m_TimeParameter: 
--- !u!1101 &-8188387325826356113
AnimatorStateTransition:
  m_ObjectHideFlags: 1
  m_CorrespondingSourceObject: {fileID: 0}
  m_PrefabInstance: {fileID: 0}
  m_PrefabAsset: {fileID: 0}
  m_Name: 
  m_Conditions:
  - m_ConditionMode: 1
    m_ConditionEvent: IsCrouching_b
    m_EventTreshold: 0
  m_DstStateMachine: {fileID: 0}
  m_DstState: {fileID: -327909122242409485}
  m_Solo: 0
  m_Mute: 0
  m_IsExit: 0
  serializedVersion: 3
  m_TransitionDuration: 0.25
  m_TransitionOffset: 0
  m_ExitTime: 0.724026
  m_HasExitTime: 0
  m_HasFixedDuration: 1
  m_InterruptionSource: 0
  m_OrderedInterruption: 1
  m_CanTransitionToSelf: 1
--- !u!1102 &-7525910390654023679
AnimatorState:
  serializedVersion: 6
  m_ObjectHideFlags: 1
  m_CorrespondingSourceObject: {fileID: 0}
  m_PrefabInstance: {fileID: 0}
  m_PrefabAsset: {fileID: 0}
  m_Name: Fall
  m_Speed: 1
  m_CycleOffset: 0
  m_Transitions:
  - {fileID: -3435149605714039007}
  - {fileID: -6651087592722762199}
  - {fileID: -6503833354412635877}
  m_StateMachineBehaviours: []
  m_Position: {x: 50, y: 50, z: 0}
  m_IKOnFeet: 0
  m_WriteDefaultValues: 1
  m_Mirror: 0
  m_SpeedParameterActive: 0
  m_MirrorParameterActive: 0
  m_CycleOffsetParameterActive: 0
  m_TimeParameterActive: 0
  m_Motion: {fileID: 7400002, guid: 5e3cbede1d2e5fa43834e0705d376eeb, type: 3}
  m_Tag: 
  m_SpeedParameter: 
  m_MirrorParameter: 
  m_CycleOffsetParameter: 
  m_TimeParameter: 
--- !u!1101 &-6996951836261229308
AnimatorStateTransition:
  m_ObjectHideFlags: 1
  m_CorrespondingSourceObject: {fileID: 0}
  m_PrefabInstance: {fileID: 0}
  m_PrefabAsset: {fileID: 0}
  m_Name: 
  m_Conditions: []
  m_DstStateMachine: {fileID: 0}
  m_DstState: {fileID: -7525910390654023679}
  m_Solo: 0
  m_Mute: 0
  m_IsExit: 0
  serializedVersion: 3
  m_TransitionDuration: 0.25
  m_TransitionOffset: 0
  m_ExitTime: 0.16666669
  m_HasExitTime: 1
  m_HasFixedDuration: 1
  m_InterruptionSource: 0
  m_OrderedInterruption: 1
  m_CanTransitionToSelf: 1
--- !u!1101 &-6651087592722762199
AnimatorStateTransition:
  m_ObjectHideFlags: 1
  m_CorrespondingSourceObject: {fileID: 0}
  m_PrefabInstance: {fileID: 0}
  m_PrefabAsset: {fileID: 0}
  m_Name: 
  m_Conditions:
  - m_ConditionMode: 4
    m_ConditionEvent: JumpHeight_f
    m_EventTreshold: 0.5
  - m_ConditionMode: 3
    m_ConditionEvent: VelocityZ_f
    m_EventTreshold: 4.5
  - m_ConditionMode: 4
    m_ConditionEvent: VelocityZ_f
    m_EventTreshold: 6.5
  m_DstStateMachine: {fileID: 0}
  m_DstState: {fileID: 2534043516656937672}
  m_Solo: 0
  m_Mute: 0
  m_IsExit: 0
  serializedVersion: 3
  m_TransitionDuration: 0.25
  m_TransitionOffset: 0
  m_ExitTime: 0.75
  m_HasExitTime: 0
  m_HasFixedDuration: 1
  m_InterruptionSource: 0
  m_OrderedInterruption: 1
  m_CanTransitionToSelf: 1
--- !u!1101 &-6503833354412635877
AnimatorStateTransition:
  m_ObjectHideFlags: 1
  m_CorrespondingSourceObject: {fileID: 0}
  m_PrefabInstance: {fileID: 0}
  m_PrefabAsset: {fileID: 0}
  m_Name: 
  m_Conditions:
  - m_ConditionMode: 4
    m_ConditionEvent: JumpHeight_f
    m_EventTreshold: 0.5
  - m_ConditionMode: 3
    m_ConditionEvent: VelocityZ_f
    m_EventTreshold: 6.5
  m_DstStateMachine: {fileID: 0}
  m_DstState: {fileID: 6509821983357646505}
  m_Solo: 0
  m_Mute: 0
  m_IsExit: 0
  serializedVersion: 3
  m_TransitionDuration: 0.25
  m_TransitionOffset: 0
  m_ExitTime: 0.75
  m_HasExitTime: 0
  m_HasFixedDuration: 1
  m_InterruptionSource: 0
  m_OrderedInterruption: 1
  m_CanTransitionToSelf: 1
--- !u!206 &-6237683413018655686
BlendTree:
  m_ObjectHideFlags: 1
  m_CorrespondingSourceObject: {fileID: 0}
  m_PrefabInstance: {fileID: 0}
  m_PrefabAsset: {fileID: 0}
  m_Name: Blend Tree
  m_Childs:
  - serializedVersion: 2
    m_Motion: {fileID: 7400000, guid: 8c2aff008e377cc4fbc09393b442f91c, type: 3}
    m_Threshold: 0
    m_Position: {x: 0, y: 0}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_DirectBlendParameter: =====Booleans=====
    m_Mirror: 0
  - serializedVersion: 2
    m_Motion: {fileID: 7400018, guid: 397210bbb3304184a82ce2dd84a238df, type: 3}
    m_Threshold: 0.04511278
    m_Position: {x: -2.1, y: 2.1}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_DirectBlendParameter: =====Booleans=====
    m_Mirror: 0
  - serializedVersion: 2
    m_Motion: {fileID: 7400016, guid: 397210bbb3304184a82ce2dd84a238df, type: 3}
    m_Threshold: 0.09022556
    m_Position: {x: 0, y: 3}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_DirectBlendParameter: =====Booleans=====
    m_Mirror: 0
  - serializedVersion: 2
    m_Motion: {fileID: 7400020, guid: 397210bbb3304184a82ce2dd84a238df, type: 3}
    m_Threshold: 0.13533834
    m_Position: {x: 2.1, y: 2.1}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_DirectBlendParameter: =====Booleans=====
    m_Mirror: 0
  - serializedVersion: 2
    m_Motion: {fileID: 7400008, guid: 1279b5761f25f3a43ab7e33e4295e875, type: 3}
    m_Threshold: 0.18045112
    m_Position: {x: -3, y: 0}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_DirectBlendParameter: =====Booleans=====
    m_Mirror: 0
  - serializedVersion: 2
    m_Motion: {fileID: 7400010, guid: 1279b5761f25f3a43ab7e33e4295e875, type: 3}
    m_Threshold: 0.22556391
    m_Position: {x: 3, y: 0}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_DirectBlendParameter: =====Booleans=====
    m_Mirror: 0
  - serializedVersion: 2
    m_Motion: {fileID: 7400028, guid: 397210bbb3304184a82ce2dd84a238df, type: 3}
    m_Threshold: 0.27067667
    m_Position: {x: -2.1, y: -2.1}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_DirectBlendParameter: =====Booleans=====
    m_Mirror: 0
  - serializedVersion: 2
    m_Motion: {fileID: 7400026, guid: 397210bbb3304184a82ce2dd84a238df, type: 3}
    m_Threshold: 0.31578946
    m_Position: {x: 0, y: -3}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_DirectBlendParameter: =====Booleans=====
    m_Mirror: 0
  - serializedVersion: 2
    m_Motion: {fileID: 7400030, guid: 397210bbb3304184a82ce2dd84a238df, type: 3}
    m_Threshold: 0.36090225
    m_Position: {x: 2.1, y: -2.1}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_DirectBlendParameter: =====Booleans=====
    m_Mirror: 0
  - serializedVersion: 2
    m_Motion: {fileID: 7400018, guid: e72f6ff54645e7a4f9653123f5e9e716, type: 3}
    m_Threshold: 0.40601504
    m_Position: {x: -3.5, y: 3.5}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_DirectBlendParameter: =====Booleans=====
    m_Mirror: 0
  - serializedVersion: 2
    m_Motion: {fileID: 7400016, guid: e72f6ff54645e7a4f9653123f5e9e716, type: 3}
    m_Threshold: 0.45112783
    m_Position: {x: 0, y: 5}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_DirectBlendParameter: =====Booleans=====
    m_Mirror: 0
  - serializedVersion: 2
    m_Motion: {fileID: 7400020, guid: e72f6ff54645e7a4f9653123f5e9e716, type: 3}
    m_Threshold: 0.49624062
    m_Position: {x: 3.5, y: 3.5}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_DirectBlendParameter: =====Booleans=====
    m_Mirror: 0
  - serializedVersion: 2
    m_Motion: {fileID: 7400008, guid: 1279b5761f25f3a43ab7e33e4295e875, type: 3}
    m_Threshold: 0.54135334
    m_Position: {x: -5, y: 0}
    m_TimeScale: 1.66
    m_CycleOffset: 0
    m_DirectBlendParameter: =====Booleans=====
    m_Mirror: 0
  - serializedVersion: 2
    m_Motion: {fileID: 7400010, guid: 1279b5761f25f3a43ab7e33e4295e875, type: 3}
    m_Threshold: 0.5864662
    m_Position: {x: 5, y: 0}
    m_TimeScale: 1.66
    m_CycleOffset: 0
    m_DirectBlendParameter: =====Booleans=====
    m_Mirror: 0
  - serializedVersion: 2
    m_Motion: {fileID: 7400028, guid: e72f6ff54645e7a4f9653123f5e9e716, type: 3}
    m_Threshold: 0.6315789
    m_Position: {x: -3.5, y: -3.5}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_DirectBlendParameter: =====Booleans=====
    m_Mirror: 0
  - serializedVersion: 2
    m_Motion: {fileID: 7400026, guid: e72f6ff54645e7a4f9653123f5e9e716, type: 3}
    m_Threshold: 0.6766918
    m_Position: {x: 0, y: -5}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_DirectBlendParameter: =====Booleans=====
    m_Mirror: 0
  - serializedVersion: 2
    m_Motion: {fileID: 7400030, guid: e72f6ff54645e7a4f9653123f5e9e716, type: 3}
    m_Threshold: 0.7218045
    m_Position: {x: 3.5, y: -3.5}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_DirectBlendParameter: =====Booleans=====
    m_Mirror: 0
  - serializedVersion: 2
    m_Motion: {fileID: 7400002, guid: 655736acb9a80194882272b70c701e14, type: 3}
    m_Threshold: 0.7669173
    m_Position: {x: -4.9, y: 4.9}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_DirectBlendParameter: =====Booleans=====
    m_Mirror: 0
  - serializedVersion: 2
    m_Motion: {fileID: 7400000, guid: 655736acb9a80194882272b70c701e14, type: 3}
    m_Threshold: 0.8120301
    m_Position: {x: 0, y: 7}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_DirectBlendParameter: =====Booleans=====
    m_Mirror: 0
  - serializedVersion: 2
    m_Motion: {fileID: 7400004, guid: 655736acb9a80194882272b70c701e14, type: 3}
    m_Threshold: 0.85714287
    m_Position: {x: 4.9, y: 4.9}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_DirectBlendParameter: =====Booleans=====
    m_Mirror: 0
  m_BlendParameter: VelocityX_f
  m_BlendParameterY: VelocityZ_f
  m_MinThreshold: 0
  m_MaxThreshold: 0.85714287
  m_UseAutomaticThresholds: 1
  m_NormalizedBlendValues: 0
  m_BlendType: 2
--- !u!1101 &-5072365275921195822
AnimatorStateTransition:
  m_ObjectHideFlags: 1
  m_CorrespondingSourceObject: {fileID: 0}
  m_PrefabInstance: {fileID: 0}
  m_PrefabAsset: {fileID: 0}
  m_Name: 
  m_Conditions: []
  m_DstStateMachine: {fileID: 0}
  m_DstState: {fileID: 0}
  m_Solo: 0
  m_Mute: 0
  m_IsExit: 1
  serializedVersion: 3
  m_TransitionDuration: 0.25
  m_TransitionOffset: 0
  m_ExitTime: 0.70000005
  m_HasExitTime: 1
  m_HasFixedDuration: 1
  m_InterruptionSource: 0
  m_OrderedInterruption: 1
  m_CanTransitionToSelf: 1
--- !u!206 &-4065322038733380257
BlendTree:
  m_ObjectHideFlags: 1
  m_CorrespondingSourceObject: {fileID: 0}
  m_PrefabInstance: {fileID: 0}
  m_PrefabAsset: {fileID: 0}
  m_Name: Blend Tree
  m_Childs:
  - serializedVersion: 2
    m_Motion: {fileID: 7400006, guid: 1c47670ca156e8a47a2d82d93ae84d76, type: 3}
    m_Threshold: 0
    m_Position: {x: 0, y: 0}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_DirectBlendParameter: =====Booleans=====
    m_Mirror: 0
  - serializedVersion: 2
    m_Motion: {fileID: 7400034, guid: 7178c289f2326ed48beb3371db5bec00, type: 3}
    m_Threshold: 0.053571437
    m_Position: {x: -1.05, y: 1.05}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_DirectBlendParameter: =====Booleans=====
    m_Mirror: 0
  - serializedVersion: 2
    m_Motion: {fileID: 7400032, guid: 7178c289f2326ed48beb3371db5bec00, type: 3}
    m_Threshold: 0.10714287
    m_Position: {x: 0, y: 1.5}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_DirectBlendParameter: =====Booleans=====
    m_Mirror: 0
  - serializedVersion: 2
    m_Motion: {fileID: 7400036, guid: 7178c289f2326ed48beb3371db5bec00, type: 3}
    m_Threshold: 0.16071431
    m_Position: {x: 1.05, y: 1.05}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_DirectBlendParameter: =====Booleans=====
    m_Mirror: 0
  - serializedVersion: 2
    m_Motion: {fileID: 7400038, guid: 7178c289f2326ed48beb3371db5bec00, type: 3}
    m_Threshold: 0.21428575
    m_Position: {x: -1.5, y: 0}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_DirectBlendParameter: =====Booleans=====
    m_Mirror: 0
  - serializedVersion: 2
    m_Motion: {fileID: 7400040, guid: 7178c289f2326ed48beb3371db5bec00, type: 3}
    m_Threshold: 0.2678572
    m_Position: {x: 1.5, y: 0}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_DirectBlendParameter: =====Booleans=====
    m_Mirror: 0
  - serializedVersion: 2
    m_Motion: {fileID: 7400044, guid: 7178c289f2326ed48beb3371db5bec00, type: 3}
    m_Threshold: 0.32142863
    m_Position: {x: -1.05, y: -1.05}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_DirectBlendParameter: =====Booleans=====
    m_Mirror: 0
  - serializedVersion: 2
    m_Motion: {fileID: 7400042, guid: 7178c289f2326ed48beb3371db5bec00, type: 3}
    m_Threshold: 0.37500006
    m_Position: {x: 0, y: -1.5}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_DirectBlendParameter: =====Booleans=====
    m_Mirror: 0
  - serializedVersion: 2
    m_Motion: {fileID: 7400046, guid: 7178c289f2326ed48beb3371db5bec00, type: 3}
    m_Threshold: 0.4285715
    m_Position: {x: 1.05, y: -1.05}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_DirectBlendParameter: =====Booleans=====
    m_Mirror: 0
  m_BlendParameter: VelocityX_f
  m_BlendParameterY: VelocityZ_f
  m_MinThreshold: 0
  m_MaxThreshold: 0.4285715
  m_UseAutomaticThresholds: 1
  m_NormalizedBlendValues: 0
  m_BlendType: 2
--- !u!1101 &-4005771782168336151
AnimatorStateTransition:
  m_ObjectHideFlags: 1
  m_CorrespondingSourceObject: {fileID: 0}
  m_PrefabInstance: {fileID: 0}
  m_PrefabAsset: {fileID: 0}
  m_Name: 
  m_Conditions:
  - m_ConditionMode: 1
    m_ConditionEvent: IsJumping_b
    m_EventTreshold: 0
  m_DstStateMachine: {fileID: 0}
  m_DstState: {fileID: -3038043799160735216}
  m_Solo: 0
  m_Mute: 0
  m_IsExit: 0
  serializedVersion: 3
  m_TransitionDuration: 0.25
  m_TransitionOffset: 0
  m_ExitTime: 0.75
  m_HasExitTime: 0
  m_HasFixedDuration: 1
  m_InterruptionSource: 0
  m_OrderedInterruption: 1
  m_CanTransitionToSelf: 1
--- !u!1101 &-3435149605714039007
AnimatorStateTransition:
  m_ObjectHideFlags: 1
  m_CorrespondingSourceObject: {fileID: 0}
  m_PrefabInstance: {fileID: 0}
  m_PrefabAsset: {fileID: 0}
  m_Name: 
  m_Conditions:
  - m_ConditionMode: 4
    m_ConditionEvent: JumpHeight_f
    m_EventTreshold: 0.5
  - m_ConditionMode: 4
    m_ConditionEvent: VelocityZ_f
    m_EventTreshold: 4.5
  m_DstStateMachine: {fileID: 0}
  m_DstState: {fileID: -170231587127102465}
  m_Solo: 0
  m_Mute: 0
  m_IsExit: 0
  serializedVersion: 3
  m_TransitionDuration: 0.25
  m_TransitionOffset: 0
  m_ExitTime: 0.75
  m_HasExitTime: 0
  m_HasFixedDuration: 1
  m_InterruptionSource: 0
  m_OrderedInterruption: 1
  m_CanTransitionToSelf: 1
--- !u!1102 &-3038043799160735216
AnimatorState:
  serializedVersion: 6
  m_ObjectHideFlags: 1
  m_CorrespondingSourceObject: {fileID: 0}
  m_PrefabInstance: {fileID: 0}
  m_PrefabAsset: {fileID: 0}
  m_Name: Jump Start
  m_Speed: 1
  m_CycleOffset: 0
  m_Transitions:
  - {fileID: -6996951836261229308}
  m_StateMachineBehaviours: []
  m_Position: {x: 50, y: 50, z: 0}
  m_IKOnFeet: 0
  m_WriteDefaultValues: 1
  m_Mirror: 0
  m_SpeedParameterActive: 0
  m_MirrorParameterActive: 0
  m_CycleOffsetParameterActive: 0
  m_TimeParameterActive: 0
  m_Motion: {fileID: 7400024, guid: 9158dd8d0caca524bb52da0696ce5b8c, type: 3}
  m_Tag: 
  m_SpeedParameter: 
  m_MirrorParameter: 
  m_CycleOffsetParameter: 
  m_TimeParameter: 
--- !u!1101 &-2788477563897101437
AnimatorStateTransition:
  m_ObjectHideFlags: 1
  m_CorrespondingSourceObject: {fileID: 0}
  m_PrefabInstance: {fileID: 0}
  m_PrefabAsset: {fileID: 0}
  m_Name: 
  m_Conditions: []
  m_DstStateMachine: {fileID: 0}
  m_DstState: {fileID: 0}
  m_Solo: 0
  m_Mute: 0
  m_IsExit: 1
  serializedVersion: 3
  m_TransitionDuration: 0.35
  m_TransitionOffset: 0
  m_ExitTime: 0.65
  m_HasExitTime: 1
  m_HasFixedDuration: 1
  m_InterruptionSource: 0
  m_OrderedInterruption: 1
  m_CanTransitionToSelf: 1
--- !u!1101 &-1843656488542291997
AnimatorStateTransition:
  m_ObjectHideFlags: 1
  m_CorrespondingSourceObject: {fileID: 0}
  m_PrefabInstance: {fileID: 0}
  m_PrefabAsset: {fileID: 0}
  m_Name: 
  m_Conditions: []
  m_DstStateMachine: {fileID: 0}
  m_DstState: {fileID: 0}
  m_Solo: 0
  m_Mute: 0
  m_IsExit: 1
  serializedVersion: 3
  m_TransitionDuration: 0.35
  m_TransitionOffset: 0
  m_ExitTime: 0.65
  m_HasExitTime: 1
  m_HasFixedDuration: 1
  m_InterruptionSource: 0
  m_OrderedInterruption: 1
  m_CanTransitionToSelf: 1
--- !u!1107 &-625020291825676894
AnimatorStateMachine:
  serializedVersion: 6
  m_ObjectHideFlags: 1
  m_CorrespondingSourceObject: {fileID: 0}
  m_PrefabInstance: {fileID: 0}
  m_PrefabAsset: {fileID: 0}
  m_Name: Jump
  m_ChildStates:
  - serializedVersion: 1
    m_State: {fileID: -3038043799160735216}
    m_Position: {x: 400, y: 0, z: 0}
  - serializedVersion: 1
    m_State: {fileID: -7525910390654023679}
    m_Position: {x: 400, y: 60, z: 0}
  - serializedVersion: 1
    m_State: {fileID: -170231587127102465}
    m_Position: {x: 180, y: 130, z: 0}
  - serializedVersion: 1
    m_State: {fileID: 2534043516656937672}
    m_Position: {x: 400, y: 130, z: 0}
  - serializedVersion: 1
    m_State: {fileID: 6509821983357646505}
    m_Position: {x: 620, y: 130, z: 0}
  m_ChildStateMachines: []
  m_AnyStateTransitions: []
  m_EntryTransitions: []
  m_StateMachineTransitions: {}
  m_StateMachineBehaviours: []
  m_AnyStatePosition: {x: 50, y: 20, z: 0}
  m_EntryPosition: {x: 420, y: -50, z: 0}
  m_ExitPosition: {x: 420, y: 220, z: 0}
  m_ParentStateMachinePosition: {x: 800, y: 20, z: 0}
  m_DefaultState: {fileID: -3038043799160735216}
--- !u!1102 &-327909122242409485
AnimatorState:
  serializedVersion: 6
  m_ObjectHideFlags: 1
  m_CorrespondingSourceObject: {fileID: 0}
  m_PrefabInstance: {fileID: 0}
  m_PrefabAsset: {fileID: 0}
  m_Name: Crouch Locomotion
  m_Speed: 1
  m_CycleOffset: 0
  m_Transitions:
  - {fileID: 3452028879023221348}
  m_StateMachineBehaviours: []
  m_Position: {x: 50, y: 50, z: 0}
  m_IKOnFeet: 0
  m_WriteDefaultValues: 1
  m_Mirror: 0
  m_SpeedParameterActive: 0
  m_MirrorParameterActive: 0
  m_CycleOffsetParameterActive: 0
  m_TimeParameterActive: 0
  m_Motion: {fileID: -4065322038733380257}
  m_Tag: 
  m_SpeedParameter: 
  m_MirrorParameter: 
  m_CycleOffsetParameter: 
  m_TimeParameter: 
--- !u!1102 &-170231587127102465
AnimatorState:
  serializedVersion: 6
  m_ObjectHideFlags: 1
  m_CorrespondingSourceObject: {fileID: 0}
  m_PrefabInstance: {fileID: 0}
  m_PrefabAsset: {fileID: 0}
  m_Name: Land
  m_Speed: 1
  m_CycleOffset: 0
  m_Transitions:
  - {fileID: -8325293901956482825}
  m_StateMachineBehaviours: []
  m_Position: {x: 50, y: 50, z: 0}
  m_IKOnFeet: 0
  m_WriteDefaultValues: 1
  m_Mirror: 0
  m_SpeedParameterActive: 0
  m_MirrorParameterActive: 0
  m_CycleOffsetParameterActive: 0
  m_TimeParameterActive: 0
  m_Motion: {fileID: 7400032, guid: 9158dd8d0caca524bb52da0696ce5b8c, type: 3}
  m_Tag: 
  m_SpeedParameter: 
  m_MirrorParameter: 
  m_CycleOffsetParameter: 
  m_TimeParameter: 
--- !u!91 &9100000
AnimatorController:
  m_ObjectHideFlags: 0
  m_CorrespondingSourceObject: {fileID: 0}
  m_PrefabInstance: {fileID: 0}
  m_PrefabAsset: {fileID: 0}
  m_Name: Humanoid
  serializedVersion: 5
  m_AnimatorParameters:
  - m_Name: =====Booleans=====
    m_Type: 1
    m_DefaultFloat: 0
    m_DefaultInt: 0
    m_DefaultBool: 0
    m_Controller: {fileID: 9100000}
  - m_Name: IsCrouching_b
    m_Type: 4
    m_DefaultFloat: 0
    m_DefaultInt: 0
    m_DefaultBool: 0
    m_Controller: {fileID: 9100000}
  - m_Name: IsJumping_b
    m_Type: 4
    m_DefaultFloat: 0
    m_DefaultInt: 0
    m_DefaultBool: 0
    m_Controller: {fileID: 9100000}
  - m_Name: =====Floats=====
    m_Type: 1
    m_DefaultFloat: 0
    m_DefaultInt: 0
    m_DefaultBool: 0
    m_Controller: {fileID: 9100000}
  - m_Name: VelocityX_f
    m_Type: 1
    m_DefaultFloat: 0
    m_DefaultInt: 0
    m_DefaultBool: 0
    m_Controller: {fileID: 9100000}
  - m_Name: VelocityZ_f
    m_Type: 1
    m_DefaultFloat: 0
    m_DefaultInt: 0
    m_DefaultBool: 0
    m_Controller: {fileID: 9100000}
  - m_Name: JumpHeight_f
    m_Type: 1
    m_DefaultFloat: 0
    m_DefaultInt: 0
    m_DefaultBool: 0
    m_Controller: {fileID: 9100000}
  m_AnimatorLayers:
  - serializedVersion: 5
    m_Name: Base Layer
    m_StateMachine: {fileID: 2451293125204860336}
    m_Mask: {fileID: 0}
    m_Motions: []
    m_Behaviours: []
    m_BlendingMode: 0
    m_SyncedLayerIndex: -1
    m_DefaultWeight: 0
    m_IKPass: 0
    m_SyncedLayerAffectsTiming: 0
    m_Controller: {fileID: 9100000}
--- !u!1101 &78561743385803406
AnimatorStateTransition:
  m_ObjectHideFlags: 1
  m_CorrespondingSourceObject: {fileID: 0}
  m_PrefabInstance: {fileID: 0}
  m_PrefabAsset: {fileID: 0}
  m_Name: 
  m_Conditions:
  - m_ConditionMode: 1
    m_ConditionEvent: IsCrouching_b
    m_EventTreshold: 0
  - m_ConditionMode: 3
    m_ConditionEvent: VelocityX_f
    m_EventTreshold: -0.1
  - m_ConditionMode: 4
    m_ConditionEvent: VelocityX_f
    m_EventTreshold: 0.1
  - m_ConditionMode: 3
    m_ConditionEvent: VelocityZ_f
    m_EventTreshold: -0.1
  - m_ConditionMode: 4
    m_ConditionEvent: VelocityZ_f
    m_EventTreshold: 0.1
  m_DstStateMachine: {fileID: 0}
  m_DstState: {fileID: 0}
  m_Solo: 0
  m_Mute: 0
  m_IsExit: 0
  serializedVersion: 3
  m_TransitionDuration: 0.25
  m_TransitionOffset: 0
  m_ExitTime: 0.724026
  m_HasExitTime: 0
  m_HasFixedDuration: 1
  m_InterruptionSource: 0
  m_OrderedInterruption: 1
  m_CanTransitionToSelf: 1
--- !u!1101 &949770826054857337
AnimatorStateTransition:
  m_ObjectHideFlags: 1
  m_CorrespondingSourceObject: {fileID: 0}
  m_PrefabInstance: {fileID: 0}
  m_PrefabAsset: {fileID: 0}
  m_Name: 
  m_Conditions:
  - m_ConditionMode: 3
    m_ConditionEvent: JumpHeight_f
    m_EventTreshold: 0.5
  m_DstStateMachine: {fileID: 0}
  m_DstState: {fileID: -7525910390654023679}
  m_Solo: 0
  m_Mute: 0
  m_IsExit: 0
  serializedVersion: 3
  m_TransitionDuration: 0.25
  m_TransitionOffset: 0
  m_ExitTime: 0.75
  m_HasExitTime: 0
  m_HasFixedDuration: 1
  m_InterruptionSource: 0
  m_OrderedInterruption: 1
  m_CanTransitionToSelf: 0
--- !u!1107 &2451293125204860336
AnimatorStateMachine:
  serializedVersion: 6
  m_ObjectHideFlags: 1
  m_CorrespondingSourceObject: {fileID: 0}
  m_PrefabInstance: {fileID: 0}
  m_PrefabAsset: {fileID: 0}
  m_Name: Base Layer
  m_ChildStates:
  - serializedVersion: 1
    m_State: {fileID: -8247859684427529401}
    m_Position: {x: 500, y: -70, z: 0}
  - serializedVersion: 1
    m_State: {fileID: -327909122242409485}
    m_Position: {x: 500, y: 20, z: 0}
  m_ChildStateMachines:
  - serializedVersion: 1
    m_StateMachine: {fileID: -625020291825676894}
    m_Position: {x: 250, y: -200, z: 0}
  m_AnyStateTransitions:
  - {fileID: -4005771782168336151}
  - {fileID: 949770826054857337}
  m_EntryTransitions: []
  m_StateMachineTransitions: {}
  m_StateMachineBehaviours: []
  m_AnyStatePosition: {x: 720, y: -300, z: 0}
  m_EntryPosition: {x: 520, y: -200, z: 0}
  m_ExitPosition: {x: 1160, y: -290, z: 0}
  m_ParentStateMachinePosition: {x: 800, y: 20, z: 0}
  m_DefaultState: {fileID: -8247859684427529401}
--- !u!1102 &2534043516656937672
AnimatorState:
  serializedVersion: 6
  m_ObjectHideFlags: 1
  m_CorrespondingSourceObject: {fileID: 0}
  m_PrefabInstance: {fileID: 0}
  m_PrefabAsset: {fileID: 0}
  m_Name: Land Roll Running
  m_Speed: 1
  m_CycleOffset: 0
  m_Transitions:
  - {fileID: -2788477563897101437}
  m_StateMachineBehaviours: []
  m_Position: {x: 50, y: 50, z: 0}
  m_IKOnFeet: 0
  m_WriteDefaultValues: 1
  m_Mirror: 0
  m_SpeedParameterActive: 0
  m_MirrorParameterActive: 0
  m_CycleOffsetParameterActive: 0
  m_TimeParameterActive: 0
  m_Motion: {fileID: 7400002, guid: 149d295397b4b6e42a9b6ee275858ba2, type: 3}
  m_Tag: 
  m_SpeedParameter: 
  m_MirrorParameter: 
  m_CycleOffsetParameter: 
  m_TimeParameter: 
--- !u!1101 &3452028879023221348
AnimatorStateTransition:
  m_ObjectHideFlags: 1
  m_CorrespondingSourceObject: {fileID: 0}
  m_PrefabInstance: {fileID: 0}
  m_PrefabAsset: {fileID: 0}
  m_Name: 
  m_Conditions:
  - m_ConditionMode: 2
    m_ConditionEvent: IsCrouching_b
    m_EventTreshold: 0
  m_DstStateMachine: {fileID: 0}
  m_DstState: {fileID: -8247859684427529401}
  m_Solo: 0
  m_Mute: 0
  m_IsExit: 0
  serializedVersion: 3
  m_TransitionDuration: 0.25
  m_TransitionOffset: 0
  m_ExitTime: 0.77868855
  m_HasExitTime: 0
  m_HasFixedDuration: 1
  m_InterruptionSource: 0
  m_OrderedInterruption: 1
  m_CanTransitionToSelf: 1
--- !u!1102 &6509821983357646505
AnimatorState:
  serializedVersion: 6
  m_ObjectHideFlags: 1
  m_CorrespondingSourceObject: {fileID: 0}
  m_PrefabInstance: {fileID: 0}
  m_PrefabAsset: {fileID: 0}
  m_Name: Land Roll Sprinting
  m_Speed: 1.4
  m_CycleOffset: 0
  m_Transitions:
  - {fileID: -1843656488542291997}
  m_StateMachineBehaviours: []
  m_Position: {x: 50, y: 50, z: 0}
  m_IKOnFeet: 0
  m_WriteDefaultValues: 1
  m_Mirror: 0
  m_SpeedParameterActive: 0
  m_MirrorParameterActive: 0
  m_CycleOffsetParameterActive: 0
  m_TimeParameterActive: 0
  m_Motion: {fileID: 7400002, guid: 149d295397b4b6e42a9b6ee275858ba2, type: 3}
  m_Tag: 
  m_SpeedParameter: 
  m_MirrorParameter: 
  m_CycleOffsetParameter: 
  m_TimeParameter: 
